// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="MY"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
</div>
`;

exports[`Matches shallow shapshot 3`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="UPCOMING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
</div>
`;

exports[`Matches shallow shapshot 4`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
</div>
`;

exports[`Matches shallow shapshot 5`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
  />
</div>
`;
